Akshaya Patra video

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -1447,3 +1447,18 @@
 
 .pr-300 {
   padding-right: 300px; }
+
+
+
+  .video-container {
+    position: relative;
+    padding-bottom: 100%; /* This is a 1:1 aspect ratio. */
+    height: 0;
+}
+.video-container video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
