--- a/assets/css/basic.css
+++ b/assets/css/basic.css
@@ -3,6 +3,7 @@
 .flipbook-viewport {
 	display: flex;
 	justify-content: center;
+	margin: 0 auto;
 	align-items: center;
 	width: 100%;
 	height: 100vh; /* Use viewport height for full height */
@@ -10,11 +11,15 @@
   
   .flipbook-viewport .container {
 	position: absolute;
+	justify-content: center;
+    align-items: center;
   }
   
   .flipbook-viewport .flipbook {
 	width: 100%;
 	height: 100%;
+	justify-content: center;
+    align-items: center;
   }
   
   .flipbook-viewport .page {
