--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4780,6 +4780,63 @@ button {
     height: 60%;
     background: url(../images/footer/footer-page-bg-1.png) no-repeat left;
 }
+.slideContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    overflow: hidden; /* Prevents slides from overflowing */
+}
+.slider {
+    position: relative;
+    width: 90%;
+    max-width: 500px;
+    overflow: hidden;
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+    align-items: center;
+    margin-left: 30%;
+    justify-content: center;
+}
+.slides {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+.slide {
+    min-width: 100%;
+    background: #fff;
+    border-right: 1px solid #ddd;
+}
+.slide iframe {
+    width: 100%;
+    height: 1300px;
+    border: none;
+    align-items: center;
+    justify-content: center;
+}
+.buttons {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
+}
+.prev,
+.next {
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+    border-radius: 50%;
+}
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
 /*---==========================
     End Footer css 
 =========================---*/
